--- a/WebApplication/Pages/Index.cshtml
+++ b/WebApplication/Pages/Index.cshtml
@@ -10,7 +10,7 @@
             <a asp-page="./Game" asp-route-id="1">New Game</a>
         </p>
         <p>            
-            <a asp-page="./ResumeGame" asp-route-id="1">Resume Game</a>
+            <a asp-page="./ResumeGame">Resume Game</a>
         </p>
         <p>
             <a asp-page="./Settings" asp-route-id="1">Settings</a>
