--- a/WebApplication/Pages/Game.cshtml
+++ b/WebApplication/Pages/Game.cshtml
@@ -4,24 +4,24 @@
 
 @{
     ViewData["Title"] = "New Game";
+    var arr = Model.Engine.GetCurrent()?.Field!;
 }
 
 <div class="text-center">
-    <h4><b>New Game</b></h4>
-    <p>Player @(Model.Engine?.GetCurrent().Char) turn</p>
-    <p>Player1 hits @(Model.Engine.GetCurrent().Hits)</p>
-    <p>@(Model.Engine.GetCurrent().SetUp) is set up? </p>
-    <p><span>@Model.Message</span></p>
-    @{
-        // await Task.Delay(1000);
-        // Console.WriteLine(11111111111111);
-    }
-    <div class="container mt-3"  style="margin-left: 11%;">
+    <div class="container text-center ml-4">
+        <h4><b>New Game</b></h4>
+        <p>Player <strong>@(Model.Engine?.GetCurrent().Char) turn</strong></p>
+        <p>Current hits <strong>@(Model.Engine.GetCurrent().Hits)</strong></p>
+        <p>State: <strong>@(Model.Engine.GetCurrent().SetUp ? "Boards Setup" : "Active game")</strong></p>
+        <h5 style="color: red"><strong>@Model.Message</strong></h5>
+    </div>
+
+    <div class="container mt-3" style="margin-left: 11%;">
         <div class="row">
             <div class="col-4" style="left: 10%">
                 <table class="table-bordered" style="width: 65%">
                     <thead>
-                    <th colspan="10">Your</th>
+                    <th colspan="10">@(Model.Engine.GetCurrent().SetUp ? "Your" : "Opponent")</th>
                     </thead>
                     <tbody>
                     <form method="post" id="mainForm">
@@ -31,32 +31,14 @@
                                 <tr>
                                     @for (var r = 0; r < Model.Engine.RowLength; r++)
                                     {
-                                        char? box = default;
-                                        try
-                                        {
-                                            box = Model.BasePlayer?.OpField![c, r];
-                                        }
-                                        catch (Exception e)
-                                        {
-                                            Console.WriteLine($"{c} {r} web");
-                                        }
-                                        
-                                        var disabled = box.GetValueOrDefault() is 'm' or 'o' or 'x';
-
-                                        if (disabled)
-                                        {
-                                            var bgColor = box is 'm' ? "red" : "green";
-                                            <td style=" background-color: @bgColor">
-                                                <input name="AreChecked" type="checkbox" disabled="disabled" value="@r,@c|"/>
-                                            </td>
-                                        }
-                                        else
-                                        {
-                                            <td >
-                                                <input name="AreChecked" type="checkbox" value="@r,@c|"/>
-                                            </td>
-                                        }
-                                    }
+                                        var box = Model.Engine.GetCurrent().MainField()[c,r];
+                                        var disabled = box is 'm' or 'o' or 'x' ? "disabled" : "";
+                                        var bgColor = box is 'm' ? "red" : "green";
+                                        var style = disabled != "" ? $"background-color: {@bgColor}" : "";
+                                        <td style="@style">
+                                            <input name="AreChecked" type="checkbox" @disabled value="@r,@c|"/>
+                                        </td>
+                                    } 
                                 </tr>
                             }
                         }
@@ -69,14 +51,14 @@
                 <form method="post" id="saveGame" asp-page-handler="Save" class="mt-3">
                     <button type="submit" form="saveGame" class="btn btn-outline-success mt-2">Save game</button>
                     <br/>
-                    <label form="saveGame" >Save to DB</label>
+                    <label form="saveGame"><small>Save to DB</small></label>
                     <input form="saveGame" type="checkbox" name="ToDb" value="true"/>
                 </form>
             </div>
             <div class="col-4 ml-3">
                 <table class="table-bordered" style="width: 65%">
                     <thead>
-                    <th colspan="10">Opponent</th>
+                    <th colspan="10">@(!Model.Engine.GetCurrent().SetUp ? "Your" : "Opponent")</th>
                     </thead>
                     <tbody>
                     <form method="post">
@@ -86,10 +68,9 @@
                                 <tr>
                                     @for (var r = 0; r < Model.Engine.RowLength; r++)
                                     {
-                                        var disabled = Model.Engine.GetCurrent()?.Field[c, r];
-
-                                        <td>
-                                            <span>@(disabled)</span>
+                                        var font = arr[c, r] == default ? "white" : "";
+                                        <td style="color: @font">
+                                            <span>@(arr[c, r])</span>
                                         </td>
                                     }
                                 </tr>
@@ -103,7 +84,7 @@
         <form method="post" asp-page-handler="SaveSettings" id="settings">
             <div class="form-row align-items-center mt-4" style="margin-left: 15%">
                 <div class="col-auto">
-                    <label  for="height">Height</label>
+                    <label for="height">Height</label>
                     <input asp-for="Height" id="height" type="text" class="form-control mb-2" min="10" value="10">
                 </div>
                 <div class="col-auto">
@@ -111,7 +92,7 @@
                     <input asp-for="Width" id="width" type="text" class="form-control mb-2" min="10" value="10">
                 </div>
                 <div class="col-auto">
-                    @{ var changed = Model.P11 >0 ? "disabled" : "";}
+                    @{ var changed = !Model.Engine.GetCurrent().SetUp ? "disabled" : "";}
                     <button type="submit" form="settings" class="btn btn-outline-primary mt-4" @(changed)>Submit</button>
                 </div>
             </div>
