--- a/WebApplication/Pages/Index.cshtml
+++ b/WebApplication/Pages/Index.cshtml
@@ -4,16 +4,13 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <div>
-        <p>            
-            <a asp-page="./Game" asp-route-id="1">New Game</a>
-        </p>
-        <p>            
+<div class="container text-center">
+    <div style="margin-top: 10rem">
+        <h4 style="margin-bottom: 3rem">            
+            <a asp-page="./Game" >New Game</a>
+        </h4>
+        <h4>            
             <a asp-page="./ResumeGame">Resume Game</a>
-        </p>
-        <p>
-            <a asp-page="./Settings" asp-route-id="1">Settings</a>
-        </p>
+        </h4>
     </div>
 </div>
