--- a/WebApplication/Pages/ResumeGame.cshtml
+++ b/WebApplication/Pages/ResumeGame.cshtml
@@ -4,16 +4,16 @@
     ViewData["Title"] = "Resume Game";
 }
 <div class="container text-center">
-    <h4>Resume game</h4>
-        @foreach (var game in Model.Games)
-        {    <form method="post">
-
+    <h4 class="mb-5 mt-5">Resume game</h4>
+    @foreach (var game in Model.Games)
+    {    
+        <form method="post">
             <p>
                 <input type="hidden" value="@game" name="name"/>
                 <button type="submit" class="btn btn-light">
                     @Html.DisplayFor(modelItem => game)
                 </button>
-            </p> </form>
-        }
-   
+            </p>
+        </form>
+    }
 </div>
